--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "preinstall": "node ./scripts/preinstall.js",
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
