--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@vue/tsconfig": "^0.8.1",
     "eslint": "^9.39.2",
     "eslint-plugin-format": "^1.1.0",
+    "fast-glob": "^3.3.3",
     "lint-staged": "^16.2.7",
     "simple-git-hooks": "^2.13.1",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^3.1.4"
   },
   "simple-git-hooks": {
