chore: 集成sass及normalize.css

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint:fix": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix"
   },
   "dependencies": {
+    "normalize.css": "^8.0.1",
     "vue": "^3.5.24"
   },
   "devDependencies": {
@@ -23,6 +24,8 @@
     "eslint-plugin-format": "^1.1.0",
     "fast-glob": "^3.3.3",
     "lint-staged": "^16.2.7",
+    "sass": "^1.97.1",
+    "sass-loader": "^16.0.6",
     "simple-git-hooks": "^2.13.1",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
