--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "type": "module",
   "version": "1.0.0",
   "private": true,
+  "imports": {
+    "#/*": "./src/*"
+  },
   "scripts": {
     "preinstall": "node ./scripts/preinstall.js",
-    "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.ts,.jsx, .tsx",
-    "lint:fix": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix"
+    "lint:fix": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix",
+    "dev": "pnpm vite --mode development",
+    "build": "pnpm vite build --mode production",
+    "preview": "pnpm vite preview"
   },
   "dependencies": {
     "normalize.css": "^8.0.1",
-    "vue": "^3.5.24"
+    "vue": "^3.5.24",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^6.7.3",
