--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,8 +2,10 @@
   "extends": "@vue/tsconfig/tsconfig.dom.json",
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
+    "paths": {
+      "#/*": ["./src/*"]
+    },
     "types": ["vite/client"],
-
     /* Linting */
     "strict": true,
     "noFallthroughCasesInSwitch": true,
