--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "preview": "pnpm vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "normalize.css": "^8.0.1",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4"
