--- a/package.json
+++ b/package.json
@@ -15,14 +15,20 @@
     "preview": "pnpm vite preview"
   },
   "dependencies": {
+    "@vue/shared": "^3.5.26",
     "axios": "^1.13.2",
+    "defu": "^6.1.4",
     "normalize.css": "^8.0.1",
+    "pinia": "^3.0.4",
+    "pinia-plugin-persistedstate": "^4.7.1",
+    "qs": "^6.14.1",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^6.7.3",
     "@types/node": "^24.10.1",
+    "@types/qs": "^6.14.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
     "eslint": "^9.39.2",
