--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -8,7 +8,7 @@
 
     /* Bundler mode */
     "moduleResolution": "bundler",
-    "types": ["node"],
+    "types": ["node", "vite/client"],
     "allowImportingTsExtensions": true,
 
     /* Linting */
