--- a/.env.development
+++ b/.env.development
@@ -1,9 +1,15 @@
 VITE_NAME=开发环境
 
+VITE_BASE=/
+
 # 端口号
 VITE_PORT=8888
 
-VITE_BASE=/
+# 接口地址
+VITE_API_BASE=/
+
+# 是否开启mock
+VITE_MOCK=true
 
 # vue-router 的模式
 VITE_ROUTER_HISTORY=history
